--- a/Src/Prosumer/public/Manager.html
+++ b/Src/Prosumer/public/Manager.html
@@ -24,14 +24,14 @@
         function main(){
             $.ajax({
                 type: 'get',
-                url: 'http://localhost:3000/user/tokenExpire',
+                url: 'http://54.197.39.195:3000/user/tokenExpire',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
                 error: function (data) {
                     $.ajax({
                         type: 'get',
-                        url: 'http://localhost:3000/user/tokenZero',
+                        url: 'http://54.197.39.195:3000/user/tokenZero',
                         headers: {
                             'Authorization': 'Bearer ' + auth
                         },
@@ -49,7 +49,7 @@
             });
             $.ajax({
                 type: 'get',
-                url: 'http://localhost:3000/user/getImage',
+                url: 'http://54.197.39.195:3000/user/getImage',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -58,15 +58,14 @@
                 },
                 success: function (json) {
                     if(typeof json.icon != "undefined"){
-                        $("#myManagerImg").attr('src','http://localhost:3000/' + json.icon);
+                        $("#myManagerImg").attr('src','http://54.197.39.195:3000/' + json.icon);
                         $("#myManagerImg").attr('style','');
                     }
                 }
             });
-
             $.ajax({
                 type: 'get',
-                url: 'http://localhost:3000/powerPlant/status',
+                url: 'http://54.197.39.195:3000/powerPlant/status',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -78,10 +77,9 @@
                     setStatus(json.status);
                 }
             });
-
             $.ajax({
                 type: 'get',
-                url: 'http://localhost:3000/user/getTotalNetProduction',
+                url: 'http://54.197.39.195:3000/user/getTotalNetProduction',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -99,10 +97,9 @@
                     document.getElementById("recommendedPrice").innerHTML = Math.round(tot)/10;
                 }
             });
-
             $.ajax({
                 type: 'get',
-                url: 'http://localhost:3000/powerplant/getPrice',
+                url: 'http://54.197.39.195:3000/powerplant/getPrice',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -114,10 +111,9 @@
                  document.getElementById("currentPrice").innerHTML = json.price;
                 }
             });
-
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/powerplant/producePower',
+                url: 'http://54.197.39.195:3000/powerplant/producePower',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -128,7 +124,6 @@
                 }
             });
         }
-
         function setStatus(status){
             if(status == 0){
                 status = "stopped";
@@ -145,7 +140,7 @@
         function getProduction(){
             $.ajax({
                 type: 'get',
-                url: 'http://localhost:3000/powerPlant/production',
+                url: 'http://54.197.39.195:3000/powerPlant/production',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -168,7 +163,7 @@
             form_data.append('avatar', file_data);
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/uploadImage',
+                url: 'http://54.197.39.195:3000/user/uploadImage',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -185,12 +180,11 @@
                 }
             });
         }
-
         function changeUser() {
             var username = document.getElementById("username").value;
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/changeUser',
+                url: 'http://54.197.39.195:3000/user/changeUser',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -205,12 +199,11 @@
                 }
             });
         }
-
         function changeName() {
             var name = document.getElementById("name").value;
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/changeName',
+                url: 'http://54.197.39.195:3000/user/changeName',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -225,12 +218,11 @@
                 }
             });
         }
-
         function changePass() {
             var password = document.getElementById("password").value;
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/changePass',
+                url: 'http://54.197.39.195:3000/user/changePass',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -245,11 +237,10 @@
                 }
             });
         }	
-
         function deleteAcc() {
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/delete',
+                url: 'http://54.197.39.195:3000/user/delete',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -263,11 +254,10 @@
                 }
             });
         }	
-
         function startPlant() {
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/powerPlant/start',
+                url: 'http://54.197.39.195:3000/powerPlant/start',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -279,11 +269,10 @@
                 }
             });
         }   
-
         function startingPlant() {
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/powerPlant/starting',
+                url: 'http://54.197.39.195:3000/powerPlant/starting',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -298,11 +287,10 @@
                 startPlant(); 
             }, 30000); //5000 = 5s
         }  
-
         function stopPlant() {
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/powerPlant/stop',
+                url: 'http://54.197.39.195:3000/powerPlant/stop',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -330,7 +318,7 @@
             var x = document.getElementById("price").value;
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/powerPlant/setPrice',
+                url: 'http://54.197.39.195:3000/powerPlant/setPrice',
                 data: {price: x},
                 dataType: 'json',
                 headers: {
@@ -347,7 +335,7 @@
         function sendBuffer(save){
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/powerPlant/updateBuffer',
+                url: 'http://54.197.39.195:3000/powerPlant/updateBuffer',
                 data: {buffer: save},
                 dataType: 'json',
                 headers: {
@@ -366,7 +354,7 @@
             const auth = href.split('?')[1];
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/statusZero',
+                url: 'http://54.197.39.195:3000/user/statusZero',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -383,7 +371,7 @@
             userSelected = false;
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/onlineCheck',
+                url: 'http://54.197.39.195:3000/user/onlineCheck',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -403,12 +391,11 @@
                 }
             });
         }
-
         function blackOutCheck(){
             userSelected = false;
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/blackOutCheck',
+                url: 'http://54.197.39.195:3000/user/blackOutCheck',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -428,14 +415,13 @@
                 }
             });
         }
-
         function sendUser(){
             var e = document.getElementById("online");
             name = e.options[e.selectedIndex].text;
             document.getElementById("prosumerName").innerHTML = name;
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/getUserData',
+                url: 'http://54.197.39.195:3000/user/getUserData',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -455,7 +441,7 @@
           if(name != ""){
               $.ajax({
                     type: 'post',
-                    url: 'http://localhost:3000/user/blocked',
+                    url: 'http://54.197.39.195:3000/user/blocked',
                     headers: {
                         'Authorization': 'Bearer ' + auth
                     },
@@ -475,7 +461,7 @@
         function unBlock(name){
             $.ajax({
                 type: 'post',
-                url: 'http://localhost:3000/user/unBlocked',
+                url: 'http://54.197.39.195:3000/user/unBlocked',
                 headers: {
                     'Authorization': 'Bearer ' + auth
                 },
@@ -531,13 +517,13 @@
     <div id="currentPriceDiv"> <p>Price:</p> <p id="currentPrice">0</p> kr/kWh</div><br>
 
     <div class="container">
-    <button type="submit" onclick="startingPlant()">Start Power Plant</button>
-    <button type="submit" onclick="stopPlant()">Stop Power Plant</button>
+        <button type="submit" onclick="startingPlant()">Start Power Plant</button>
+        <button type="submit" onclick="stopPlant()">Stop Power Plant</button>
     </div>
 
     <div class="container">
-    <label for="save"><p id="text" >What percentage of your production would you like to save in the buffer?</p></label>
-    <input type="text" placeholder="0" id="save" required>
+        <label for="save"><p id="text" >What percentage of your production would you like to save in the buffer?</p></label>
+        <input type="text" placeholder="0" id="save" required>
     </div>
 
         <div class="container">
@@ -567,7 +553,6 @@
         </div>
     </div>
 
-
     <div class="container" id="submit">
     <input type="file" id="file" name="file" multiple />
     <button type="submit" onclick="upload()">Upload</button>
@@ -580,7 +565,5 @@
     <div class="container">
     <button type="submit" onclick="deleteAcc()">Delete Account</button>
     </div>
-
-	
   </body>
 </html>
