--- a/Src/Prosumer/public/Manager.html
+++ b/Src/Prosumer/public/Manager.html
@@ -40,7 +40,7 @@
                         },
                         success: function (json) {
                             alert("You have been logged in for too long, please login again!");
-                            window.location.replace('http://localhost:8000');
+                            window.location.replace('http://54.197.39.195:8000');
                         }
                     });
                 },
@@ -195,7 +195,7 @@
                 },
                 success: function (json) {
                     alert('Username has been changed, please login again!')
-                    window.location.replace('http://localhost:8000');
+                    window.location.replace('http://54.197.39.195:8000');
                 }
             });
         }
@@ -214,7 +214,7 @@
                 },
                 success: function (json) {
                     alert('Name has been changed, please login again!')
-                    window.location.replace('http://localhost:8000');
+                    window.location.replace('http://54.197.39.195:8000');
                 }
             });
         }
@@ -233,7 +233,7 @@
                 },
                 success: function (json) {
                     alert('Password has been changed, please login again!')
-                    window.location.replace('http://localhost:8000');
+                    window.location.replace('http://54.197.39.195:8000');
                 }
             });
         }	
@@ -250,7 +250,7 @@
                 },
                 success: function (json) {
                     alert('Your account has been deleted')
-                    window.location.replace('http://localhost:8000');
+                    window.location.replace('http://54.197.39.195:8000');
                 }
             });
         }	
@@ -363,7 +363,7 @@
                     console.debug(data);
                 },
                 success: function (json) {
-                    window.location.replace('http://localhost:8000');
+                    window.location.replace('http://54.197.39.195:8000');
                 }
             });
         }
