--- a/Src/Prosumer/public/SignUp.html
+++ b/Src/Prosumer/public/SignUp.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
   <head>
-    <link rel="stylesheet" href="/static/style.css">
+    <link rel="stylesheet" href="/static/styleSignup.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js" type="text/javascript">
     </script>
   </head>
@@ -16,25 +16,27 @@
                     console.debug(data);
                 },
                 success: function (json) {
-                	window.location.replace('http://54.162.94.111:7000');
+                    window.location.replace('http://54.162.94.111:7000');
                 }
             });
 		}
 		function register(){
 			signup(document.getElementById("username").value, document.getElementById("password").value, document.getElementById("name").value);
 		}
+        function cancel(){
+            window.location.replace('http://54.162.94.111:7000');
+        }
 	</script>
 
-	<h1>Sign Up</h1>
+	<h1>Grean Lean Electrics</h1>
 
-	<div class="container">
-        <label for="name"><b>Name</b></label>
-        <input type="text" id="name" required>
-            <label for="username"><b>Username</b></label>
-        <input type="text" id="username" required>
-        <label for="password"><b>Password</b></label>
-        <input type="password" id="password" required>
-        <button type="submit" onclick="register()">Register</button>
+	<div id="container">
+        <h2>Register</h2>
+        <input class="input" type="text" id="name" placeholder="Name" required>
+        <input class="input" type="text" id="username" placeholder="Username" required>
+        <input class="input" type="password" id="password" placeholder="Password" required>
+        <button class="button" type="submit" onclick="register()">Register</button>
+        <button class="button" type="submit" onclick="cancel()">Cancel</button>
   	</div>
   </body>
 </html>
